--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "vue": "^2.6.11",
+    "vue-json-csv": "^1.2.11",
     "vue-pdf": "^4.1.0"
   },
   "devDependencies": {
