--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "download-webviewer": "npx @pdftron/webviewer-downloader"
   },
   "dependencies": {
+    "aws-sdk": "^2.756.0",
     "core-js": "^3.6.5",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
